# flask-file-explorer

./: .env  .gitignore  README.md  app.py  db.py  file_index.json  pyproject.toml  requirements.txt  scanner.py
static/css/: style.css
templates/: base.html  category.html  index.html  viewer.html
